Arrays.asList set & add are unsupported